Actualización de mensaje de error para la contraseña

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="col-md-6 px-3">
                 <div class="form-floating mb-3">
                     <input type="password" class="form-control" id="password" name="password" placeholder="Contraseña">
-                    <div class="invalid-feedback">Debe ser de 8 a 15 dígitos, contener al menos una letra mayúscula y una minúscula, un dígito, sin espacios en blanco y al menos 1 carácter especial.</div>       
+                    <div class="invalid-feedback">Debe ser de 8 a 15 caracteres, contener al menos una letra mayúscula y una minúscula, un número, sin espacios en blanco y al menos 1 carácter especial.</div>       
                     <div class="valid-feedback"></div> 
                     <label for="floatingInput">Contraseña</label>
                 </div>
